--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,3 +1,8 @@
-<p>Nombre: {{first_name}}</p>
-<p>Apellido: {{last_name}} </p>
-<p>Email: {{email}} </p>
+<div>
+  <h3>Bienvenid@!</h3>
+  <p>Nombre: {{first_name}}</p>
+  <p>Apellido: {{last_name}} </p>
+  <p>Edad: {{age}}</p>
+  <p>Email: {{email}} </p>
+  <p>Rol: {{role}}</p>
+</div>
